--- a/fundamentals/fundamentals_(nice).ipynb
+++ b/fundamentals/fundamentals_(nice).ipynb
@@ -1,1 +1,151 @@
-{"cells": [{"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Fundamentals (Nice)</span></div>"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 1 If if is not enough"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 2 Ternary operators or Conditional Statements"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 3 Swapping values"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 4 There are more types"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 5 Operator precedance"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 6 Variables in Python are just names"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 6.1 The Problem"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 6.2 An explanation"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## 6.3 A solution"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["# 7 == is not the same as is"]}, {"cell_type": "markdown", "id": "123456", "metadata": {}, "attachments": {}, "source": ["## Footnotes"]}], "metadata": {"kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}, "language_info": {"codemirror_mode": {"name": "ipython", "version": 3}, "file_extension": ".py", "mimetype": "text/x-python", "name": "python", "nbconvert_exporter": "python", "pygments_lexer": "ipython3", "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"}, "toc": {"base_numbering": 1, "nav_menu": {}, "number_sections": true, "sideBar": true, "skip_h1_title": false, "title_cell": "Table of Contents", "title_sidebar": "Contents", "toc_cell": false, "toc_position": {}, "toc_section_display": true, "toc_window_display": false}, "vscode": {"interpreter": {"hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"}}}, "nbformat": 4, "nbformat_minor": 5}
+{
+ "cells": [
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "123456",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align:left;font-size:2em\"><span style=\"font-weight:bolder;font-size:1.25em\">SP2273 | Learning Portfolio</span><br><br><span style=\"font-weight:bold;color:darkred\">Fundamentals (Nice)</span></div>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "84156e2e",
+   "metadata": {},
+   "source": [
+    "# 1 If if is not enough"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "ed149e2c",
+   "metadata": {},
+   "source": [
+    "# 2 Ternary operators or Conditional Statements"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "0d7dd2a0",
+   "metadata": {},
+   "source": [
+    "# 3 Swapping values"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "c1fcc7b4",
+   "metadata": {},
+   "source": [
+    "# 4 There are more types"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "f469f540",
+   "metadata": {},
+   "source": [
+    "# 5 Operator precedance"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "0edd2535",
+   "metadata": {},
+   "source": [
+    "# 6 Variables in Python are just names"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "a4dea7fa",
+   "metadata": {},
+   "source": [
+    "## 6.1 The Problem"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "08132c5a",
+   "metadata": {},
+   "source": [
+    "## 6.2 An explanation"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "ed99d55f",
+   "metadata": {},
+   "source": [
+    "## 6.3 A solution"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "01b6cbbc",
+   "metadata": {},
+   "source": [
+    "# 7 == is not the same as is"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "4e306d02",
+   "metadata": {},
+   "source": [
+    "## Footnotes"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.5"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
